<resources>
    <string name="app_name">Group 6 Project</string>
    <string name="view_pizzas">View Pizzas</string>
    <string name="slog1">Top #1 Fastest Delivery Food For You!</string>
    <string name="slog2">Order food and get delivery in the fastest time in the town!</string>
    <string name="spiffy_logo">spiffy logo</string>
    <string name="productscreen_title">Choose what you want to eat</string>
    <string name="cart_text">Cart</string>
    <string name="product_demo_image">Product Demo Image</string>
    <string name="demo_seller_name">Spiffy</string>
    <string name="seller_name">Seller Name</string>
    <string name="price">Price</string>
    <string name="demo_price">$20</string>
    <string name="description">Description</string>
    <string name="demo_description">This is my first Demo Product. I hope you will like!. if you like it please share it with your friends and Happy Pizza Day from Me!</string>
    <string name="pizza_name">Name</string>
    <string name="demo_cheeze_type">Cheeze Pizza</string>
    <string name="pizza_description">Pizza Description</string>
    <string name="btn_add_to_cart">Add To Cart</string>
    <string name="btn_checkout">Checkout</string>
    <string name="cart_screen_label">Current Carts</string>
    <string name="back">Back</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="total_amount">Total Amount</string>
    <string name="demo_total_payable_amounta">1200$</string>
    <string name="submit">Submit</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="already_signup_login_now">Already Signup! Login Now!</string>
    <string name="signup_here">Signup Here!</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_expiry_date">Enter Expiry Date</string>
    <string name="enter_credit_name">Enter Credit Name</string>
    <string name="add_credit_card_details">Add Credit Card Details</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="add_user_details">Add User Details</string>
    <string name="total_payment">Total Payment</string>
    <string name="textview">TextView</string>
</resources>