<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="253dp"
                android:contentDescription="@string/product_demo_image"
                android:scaleType="centerCrop"
                android:src="@drawable/img1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/pizzaNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_name"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/sellerNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_cheeze_type"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sellerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_seller_name"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/priceLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_price"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/descriptionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/demo_description"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>