<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bg_primary"
    android:padding="10sp"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/add_user_details"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:ems="10"
                android:hint="@string/enter_address"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:autofillHints="postalAddress" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/add_credit_card_details"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="monospace"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_credit_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ExpiryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_expiry_date"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/CardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:ems="10"
                android:hint="@string/enter_card_number"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:autofillHints="creditCardNumber" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalPriceLabel"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="20sp"
                    android:ems="10"
                    android:gravity="center|center_vertical"
                    android:minHeight="48dp"
                    android:text="@string/total_payment"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:ems="10"
                    android:gravity="center|center_vertical"
                    android:minHeight="48dp"
                    android:text="@string/textview"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/errorMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="20sp"
                    android:ems="10"
                    android:gravity="center|center_vertical"
                    android:minHeight="48dp"
                    android:text=""
                    android:textColor="#FF0000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:backgroundTint="@color/primary"
                android:text="@string/submit"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>