<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:padding="10dp"
        android:orientation="vertical"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/loginEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:hint="@string/enter_email_id"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/loginPasswordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/primary"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/signUplink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_here"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>