<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="5sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|clip_vertical|center_horizontal">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/product_demo_image"
                android:scaleType="centerCrop"
                android:src="@drawable/img1" />

            <LinearLayout
                android:id="@+id/after"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/cart_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/pizza_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/demo_price"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start">


                    <ImageView
                        android:id="@+id/btn_dec"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/demo_description"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:src="@drawable/minus" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_toEndOf="@+id/btn_dec"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:paddingLeft="2sp"
                        android:paddingRight="2sp"
                        android:text="@string/one"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/btn_incr"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_toEndOf="@+id/quantity"
                        android:contentDescription="@string/demo_description"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:src="@drawable/add" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>