<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="265dp"
        android:layout_height="263dp"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:contentDescription="@string/spiffy_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spiffy_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="298dp"
        android:layout_height="72dp"
        android:layout_marginTop="60sp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/slog1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="267dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/slog2"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewButton"
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:focusable="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/view_pizzas"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>